# nparrot

./: .env.template  .goosehints  Cargo.toml  DCO.txt  LICENSE  README.md
media/: nparrot.pxd
src/: main.rs  mcp.rs  process_management.rs  utils.rs
